--- a/README.html
+++ b/README.html
@@ -84,18 +84,9 @@
             <section class="normal" id="section-">
 <!--bookdown:title:end-->
 <!--bookdown:title:start-->
-<p>This the documents of the CASA0005 seminar 2.</p>
-<ul>
-<li><p><input type="checkbox" disabled="" />
-2. Render locally with <code>bookdown::render_book("index.Rmd")</code>.</p></li>
-<li><p><input type="checkbox" disabled="" />
-3. Use <code>browseURL("docs/index.html")</code> to view your book locally (or just open <code>index.html</code> in a browser).</p></li>
-<li><p><input type="checkbox" disabled="" />
-4. If it looks good, commit and push all changed files to GitHub.</p></li>
-</ul>
-<p>(You will need to repeat steps 2 and 4 every time you wish to update the book online.)</p>
+<p>This is the document of the CASA0005 seminar 2. It aims to advance students’ data visualization skills in R using the ggplot2 package.</p>
+<p><img src="casa_logo.jpg" width="100" ></p>
 <p><em>This repo was initially generated from a bookdown template available here: <a href="https://github.com/jtr13/bookdown-template" class="uri">https://github.com/jtr13/bookdown-template</a>.</em></p>
-<p><img src="first.png" out.wide="100%" /></p>
             </section>
 
           </div>
